--- a/codesquare/src/main/resources/static/styles/lectureCustom.css
+++ b/codesquare/src/main/resources/static/styles/lectureCustom.css
@@ -223,7 +223,7 @@
   font-weight:500;
   text-align:center;
 }
-.review-content>[name=content]{
+.review-content>[name=content],[name=modify-content]{
   border:1px solid #d8d8d8;
   min-height:100%;
   width:100%;
