--- a/codesquare/src/main/resources/templates/member/login/findId.html
+++ b/codesquare/src/main/resources/templates/member/login/findId.html
@@ -14,6 +14,6 @@
 <input type="text" id="email" name="email" onclick="emailValidate()"><br />
 <span id="findIdDone">  아이디 찾기</span>
 </div>
-
+변경변
 </body>
 </html>
