--- a/codesquare/src/main/resources/templates/member/myPage/modifyMyInfo.html
+++ b/codesquare/src/main/resources/templates/member/myPage/modifyMyInfo.html
@@ -53,4 +53,5 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security" >
 <script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
 <script th:src="@{/static/js/member/modifyMyInfo.js}"></script> 
 
-
+</body>
+</html>
