--- a/codesquare/src/main/resources/templates/member/myPage/myWantedList.html
+++ b/codesquare/src/main/resources/templates/member/myPage/myWantedList.html
@@ -28,3 +28,5 @@
 	<br />
 <script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
 <script th:src="@{/static/js/member/myPage.js}"></script>
+</body>
+</html>
