--- a/codesquare/src/main/resources/templates/fragments/header.html
+++ b/codesquare/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <header class="main-header" th:fragment="headerFragment">
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<a class="navbar-brand" href="/"><img th:src="@{/static/images/logo.png}" alt="noimg" /></a>
@@ -55,6 +55,21 @@
 					</ul>
 				</li>
 			</ul>
+			<div sec:authorize="isAuthenticated()">
+				<ul>
+					<li><span sec:authentication="name"></span></li>
+					<li><a th:href="@{/member/myPage}">마이페이지</a></li>
+					<li><a th:href="@{/logout}">로그아웃</a></li>
+				</ul>
+			</div>
+
+
+			<div sec:authorize="isAnonymous()">
+				<ul>
+					<li><a th:href="@{/member/login}">로그인</a></li>
+					<li><a th:href="@{/member/signUp}">회원가입</a></li>
+				</ul>
+			</div>
 			
 		</div>
 	</nav>
