룸 검색 커밋

--- a/codesquare/src/main/resources/templates/fragments/header.html
+++ b/codesquare/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">새소식</a>
 					<ul class="csnav-dropdown">
-						<li><a class="nav-link" href="/noticeBoard">공지사항</a>
+						<li><a class="nav-link" href="/home">공지사항</a>
 						<li><a class="nav-link" href="#">이벤트</a>
             <li><a class="nav-link" href="#">IT News</a>
 					</ul>
