--- a/codesquare/src/main/resources/templates/layout/mainLayout.html
+++ b/codesquare/src/main/resources/templates/layout/mainLayout.html
@@ -16,7 +16,10 @@
 <link rel="stylesheet" type="text/css" href="/static/plugins/colorbox/colorbox.css" th:href="@{/static/plugins/colorbox/colorbox.css}" >
 <link rel="stylesheet" type="text/css" href="/static/styles/main_styles.css" th:href="@{/static/styles/main_styles.css}">
 <link rel="stylesheet" type="text/css" href="/static/styles/responsive.css" th:href="@{/static/styles/responsive.css}">
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
+  
 <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
 <!-- default header name is X-CSRF-TOKEN -->
 <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
