--- a/codesquare/src/main/resources/templates/fragments/header.html
+++ b/codesquare/src/main/resources/templates/fragments/header.html
@@ -56,6 +56,120 @@
 						<li><a class="nav-link" href="#">유저커리큘럼</a>
 					</ul>
 				</li>
+				
+				
+			<!-- 알림 -->
+				<div class="noti-dropdown">
+					<a onclick="myFunction()" id="noti-btn" class="noti-btn"> <img
+						width="25" height="25" class="noti-btn"
+						src="https://previews.123rf.com/images/hanaschwarz/hanaschwarz1211/hanaschwarz121100002/16260237-%ED%9D%B0%EC%83%89-%EB%B0%B0%EA%B2%BD%EC%97%90-%EA%B3%A0%EB%A6%BD-%EB%B9%A8%EA%B0%84-%EB%A6%AC%EB%B3%B8%EA%B3%BC-%EC%A2%85.jpg"
+						alt="Course noti">
+					</a>
+
+					<div class="noti-count">3</div>
+
+
+
+					<div id="myDropdown" class="dropdown-content">
+						<div class="header">
+							<span> 알림</span>
+							<button id="read-btn">읽은 알림 삭제</button>
+							<button id="all-btn">모두삭제 l</button>
+						</div>
+
+						<ul id="noti-list">
+							<li class="notification"><a href="/"> <img
+									src="https://previews.123rf.com/images/hanaschwarz/hanaschwarz1211/hanaschwarz121100002/16260237-%ED%9D%B0%EC%83%89-%EB%B0%B0%EA%B2%BD%EC%97%90-%EA%B3%A0%EB%A6%BD-%EB%B9%A8%EA%B0%84-%EB%A6%AC%EB%B3%B8%EA%B3%BC-%EC%A2%85.jpg"
+									width="30" height="30" class="noti-sender-photo" />
+									<div class="noti-main">
+
+										<div style="clear: both;"></div>
+										<div class="noti-title-only">
+											<span class="remarkable-viewer"></span>
+											<p>
+												<strong>스터디</strong>참여중인 강남스터디 일정 D-3입니다.
+											</p>
+											<div class="noti-date">2019.01.27 17:08</div>
+										</div>
+									</div>
+							</a></li>
+
+							<li class="notification" id="notification-id895558"><a
+								href="/"> <img
+									src="https://previews.123rf.com/images/hanaschwarz/hanaschwarz1211/hanaschwarz121100002/16260237-%ED%9D%B0%EC%83%89-%EB%B0%B0%EA%B2%BD%EC%97%90-%EA%B3%A0%EB%A6%BD-%EB%B9%A8%EA%B0%84-%EB%A6%AC%EB%B3%B8%EA%B3%BC-%EC%A2%85.jpg"
+									width="30" height="30" class="noti-sender-photo">
+									<div class="noti-main">
+
+										<div style="clear: both;"></div>
+										<div class="noti-title-only">
+											<span class="remarkable-viewer"></span>
+											<p>
+												<strong>세미나</strong>신청하신 서초세미나 신청이 <strong>수락</strong>되었습니다.
+											</p>
+											<div class="noti-date">2019.01.25 17:08</div>
+										</div>
+									</div>
+							</a></li>
+
+
+							<li class="notification" id="notification-id895558"><a
+								href="/"> <img
+									src="https://previews.123rf.com/images/hanaschwarz/hanaschwarz1211/hanaschwarz121100002/16260237-%ED%9D%B0%EC%83%89-%EB%B0%B0%EA%B2%BD%EC%97%90-%EA%B3%A0%EB%A6%BD-%EB%B9%A8%EA%B0%84-%EB%A6%AC%EB%B3%B8%EA%B3%BC-%EC%A2%85.jpg"
+									width="30" height="30" class="noti-sender-photo" />
+									<div class="noti-main">
+										<div style="clear: both;"></div>
+										<div class="noti-title-only">
+											<span class="remarkable-viewer"></span>
+											<p>
+												<strong style="color: skyblue;">스터디</strong>회원님의 게시판에 댓글이
+												달렸습니다.
+											</p>
+											<div class="noti-date">2019.01.23 17:08</div>
+										</div>
+									</div>
+							</a></li>
+
+
+							<li class="notification" id="notification-id895558"><a
+								href="/"> <img
+									src="https://previews.123rf.com/images/hanaschwarz/hanaschwarz1211/hanaschwarz121100002/16260237-%ED%9D%B0%EC%83%89-%EB%B0%B0%EA%B2%BD%EC%97%90-%EA%B3%A0%EB%A6%BD-%EB%B9%A8%EA%B0%84-%EB%A6%AC%EB%B3%B8%EA%B3%BC-%EC%A2%85.jpg"
+									width="30" height="30" class="noti-sender-photo" />
+									<div class="noti-main">
+										<div style="clear: both;"></div>
+										<div class="noti-title-only">
+											<span class="remarkable-viewer"></span>
+											<p>
+												<strong style="color: skyblue;">코드스퀘어</strong>회원님께 새로운 소식이
+												도착하였습니다.
+											</p>
+											<div class="noti-date">2019.01.23 17:08</div>
+										</div>
+									</div>
+							</a></li>
+
+							<li class="notification" id="notification-id895558"><a
+								href="/"> <img
+									src="https://previews.123rf.com/images/hanaschwarz/hanaschwarz1211/hanaschwarz121100002/16260237-%ED%9D%B0%EC%83%89-%EB%B0%B0%EA%B2%BD%EC%97%90-%EA%B3%A0%EB%A6%BD-%EB%B9%A8%EA%B0%84-%EB%A6%AC%EB%B3%B8%EA%B3%BC-%EC%A2%85.jpg"
+									width="30" height="30" class="noti-sender-photo" />
+									<div class="noti-main">
+										<div style="clear: both;"></div>
+										<div class="noti-title-only">
+											<span class="remarkable-viewer"></span>
+											<p>
+												<strong style="color: skyblue;">코드스퀘어</strong> 강희정님의 가입을
+												축하드립니다.
+											</p>
+											<div class="noti-date">2019.01.23 17:08</div>
+										</div>
+									</div>
+							</a></li>
+						</ul>
+					</div>
+				</div>
+
+
+
+
 			</ul>
 			<div sec:authorize="isAuthenticated()">
 				<ul>
