--- a/codesquare/src/main/resources/templates/layout/mainLayout.html
+++ b/codesquare/src/main/resources/templates/layout/mainLayout.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" type="text/css" href="/static/plugins/colorbox/colorbox.css" th:href="@{/static/plugins/colorbox/colorbox.css}" >
 <link rel="stylesheet" type="text/css" href="/static/styles/main_styles.css" th:href="@{/static/styles/main_styles.css}">
 <link rel="stylesheet" type="text/css" href="/static/styles/responsive.css" th:href="@{/static/styles/responsive.css}">
+<link rel="stylesheet" type="text/css" th:href="@{static/styles/notice.css}">
 
   
 <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
@@ -25,6 +26,7 @@
 <body>
 <!-- 페이지의 헤더부분 -->
 <header th:replace="fragments/header :: headerFragment"></header>
+<script th:src="@{/static/js/notice/notice.js}"></script>
 
 <!-- 페이지의 content -->
 <div layout:fragment="content" style="margin-bottom: 100px;"></div>
