--- a/codesquare/src/main/resources/templates/layout/mainLayout.html
+++ b/codesquare/src/main/resources/templates/layout/mainLayout.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <title>Welcome to CodeSquare!</title>
-<meta charset="utf-8">
+<meta charset="utf-8"> 
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="CodeSquare Project">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,6 +16,7 @@
 <link rel="stylesheet" type="text/css" href="/static/plugins/colorbox/colorbox.css" th:href="@{/static/plugins/colorbox/colorbox.css}" >
 <link rel="stylesheet" type="text/css" href="/static/styles/main_styles.css" th:href="@{/static/styles/main_styles.css}">
 <link rel="stylesheet" type="text/css" href="/static/styles/responsive.css" th:href="@{/static/styles/responsive.css}">
+<link rel="stylesheet" type="text/css" href="/static/styles/notice.css" th:href="@{/static/styles/notice.css}">
 <meta id="_csrf" name="_csrf" th:content="${_csrf.token}"/>
 <!-- default header name is X-CSRF-TOKEN -->
 <meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}"/>
@@ -46,6 +47,7 @@
 <script th:src="@{/static/plugins/colorbox/jquery.colorbox-min.js}"></script>
 <script th:src="@{/static/plugins/parallax-js-master/parallax.min.js}"></script>
 <script th:src="@{/static/js/custom.js}"></script>
+<script th:src="@{/static/js/notice/notice.js}"></script>
 
 
 </body>
