에러수정 및 font-awesome 경로 설정

--- a/codesquare/src/main/resources/templates/lecture/lectureView.html
+++ b/codesquare/src/main/resources/templates/lecture/lectureView.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css"	href="/static/plugins/colorbox/colorbox.css"	th:href="@{/static/plugins/colorbox/colorbox.css}">
 <link rel="stylesheet" type="text/css"	href="/static/styles/main_styles.css"	th:href="@{/static/styles/main_styles.css}">
 <link rel="stylesheet" type="text/css"	href="/static/styles/responsive.css"	th:href="@{/static/styles/responsive.css}">
-<link rel="stylesheet" type="text/css"	href="/webjars/font-awesome/5.7.1/css/all.css"	th:href="@{/webjars/font-awesome/5.7.1/css/all.css}"/>
+<link rel="stylesheet" type="text/css"	href="/webjars/font-awesome/5.7.1/css/all.css"	th:href="@{/webjars/font-awesome/5.7.1/css/all.min.css}"/>
 <link rel="stylesheet" type="text/css"	th:href="@{/static/styles/lecture/lectureCustom.css}">
 
 </head>
