--- a/codesquare/bin/src/main/resources/templates/member/myPage/myAppliedList.html
+++ b/codesquare/bin/src/main/resources/templates/member/myPage/myAppliedList.html
@@ -8,15 +8,18 @@
 <body>
 
 	나의 신청내역
-	<input type="hidden" id="userId" th:value="${userId}">
 
-	<div>신청날짜 신청내역 상태 </div>
+	<div>신청날짜 신청내역 상태 신청메세지</div>
+
 	<div th:each="list : ${list}">
-		<span th:text="${list.applyDate}"></span>
-		<span th:text="${list.title}"></span>
-		<span th:text="${list.status}"></span>
-		
+		<span th:text="${list.applyDate}"></span> <span
+			th:text="${list.title}"></span> <span th:text="${list.status}"></span>
+			<span th:text="${list.applyContent}"></span>
+
 	</div>
-<br /> <br /> <br /> <br />
+	<br />
+	<br />
+	<br />
+	<br />
 </body>
 </html>
