--- a/codesquare/bin/src/main/resources/templates/member/myPage/myAppliedList.html
+++ b/codesquare/bin/src/main/resources/templates/member/myPage/myAppliedList.html
@@ -10,13 +10,7 @@
 	나의 신청내역
 
 	<div>신청날짜 신청내역 상태 신청메세지</div>
-
-	<div th:each="list : ${list}">
-		<span th:text="${list.applyDate}"></span> <span
-			th:text="${list.title}"></span> <span th:text="${list.status}"></span>
-			<span th:text="${list.applyContent}"></span>
-
-	</div>
+tututuytuytytytuyytyutut
 	<br />
 	<br />
 	<br />
