--- a/codesquare/src/main/resources/templates/member/myPage/myWantedList.html
+++ b/codesquare/src/main/resources/templates/member/myPage/myWantedList.html
@@ -20,7 +20,9 @@
 				th:unless="${list.status} == 1" th:text="모집완료"></span>
 		</p>
 
-		<span class="detail">확인</span>
+		<span class="detail">신청자 : <span th:text="${list.ApplyUserId}"></span>, 
+		신청일: <span th:text="${list.applyDate}">, 신청메세지: <span th:text="${list.applyContent}"></span></span>
+		</span>
 	</div>
 	<br />
 	<br />
