소셜로그인 수정, 로그인 하기 전 페이지 기억

--- a/codesquare/src/main/resources/templates/member/myPage/myPage.html
+++ b/codesquare/src/main/resources/templates/member/myPage/myPage.html
@@ -18,7 +18,7 @@
 	<div class="inner" >
 		<nav>
 			<!-- <img th:src="@{/static/}+${item.thumbnailPath}"	alt="강좌썸네일" /> -->
-			<span id="myNickName" th:text="${user.nickName}"> </span> 님, 안녕하세요!
+			<span id="myNickName" th:text="${session.nickName}"> </span> 님, 안녕하세요!
 
 			<ul >
 				<li ><a th:href="@{/myMessage}">내 쪽지함</a></li>
