--- a/codesquare/src/main/resources/templates/member/myPage/changePw.html
+++ b/codesquare/src/main/resources/templates/member/myPage/changePw.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" 	layout:decorator="layout/mainLayout"
-	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org" >
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
@@ -29,10 +28,9 @@
 
 
 <br /> <br /> <br /> <br />
-<th:block layout:fragment="script">
 <script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
 <script th:src="@{/static/js/member/modifyMyInfo.js}"></script> 
-</head></th:block>
+
 		</div>
 	</form>
 	</body>
