메서드 정리, 강사 신청 심사중 페이지 수정(신청내역보이게)

--- a/codesquare/src/main/resources/templates/member/myPage/instructorPending.html
+++ b/codesquare/src/main/resources/templates/member/myPage/instructorPending.html
@@ -7,8 +7,16 @@
 </head>
 <body>
 
-		<h2>심사중</h2>
+	<h2>심사중</h2>
+	<br />
+	<br />
+	
+	신청 사유:
+	<br />
+	<span id="myNickName" th:text="${instructorInfo.introContent}"> </span> 
+
 <br /> <br /> <br /> <br />
+
 
 </body>
 </html>
